# array

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  foonathan_array-config.cmake  main.cpp
doc/: decision-tree.md
include/foonathan/array/: array.hpp  array_view.hpp  bag.hpp  block_storage.hpp  block_storage_algorithm.hpp  block_storage_allocator.hpp  block_storage_arg.hpp  block_storage_default.hpp  block_storage_embedded.hpp  block_storage_heap.hpp  block_storage_heap_sbo.hpp  block_storage_new.hpp  block_storage_sbo.hpp  block_view.hpp  byte_view.hpp  config.hpp  contiguous_iterator.hpp  flat_map.hpp  flat_set.hpp  growth_policy.hpp  input_view.hpp  key_compare.hpp  memory_block.hpp  pointer_iterator.hpp  raw_storage.hpp  small_array.hpp  small_bag.hpp  small_flat_set.hpp  variant_bag.hpp  view.hpp
include/foonathan/array/detail/: all_of.hpp  is_trivial.hpp  swappable.hpp
test/: CMakeLists.txt  array.cpp  array_view.cpp  bag.cpp  block_storage.cpp  block_storage_algorithm.hpp  block_storage_allocator.cpp  block_storage_args.cpp  block_storage_embedded.cpp  block_storage_new.cpp  block_storage_sbo.cpp  block_view.cpp  byte_view.cpp  contiguous_iterator.cpp  equal_checker.hpp  flat_map.cpp  flat_set.cpp  growth_policy.cpp  input_view.cpp  key_compare.cpp  leak_checker.hpp  memory_block.cpp  pointer_iterator.cpp  raw_storage.cpp  small.cpp  test.cpp  variant_bag.cpp  view.cpp
